<resources>
    <string name="app_name">ButterFly</string>
    <string name="put_your_number">Put your number here babe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="made_with_love">Crafted with \u2764</string>

    <string name="typing">typing…</string>
    <string name="online">online</string>
    <string name="is_thinking">is thinking about…</string>
    <string name="im_thinking_about">I\'m thinking about…</string>

    <string name="b">Bhavya</string>

    <string-array name="like_him">
        <item>So you like him ah? :D</item>
        <item>Oh stop it! You seriously like him? :)</item>
        <item>That\'s it. You started loving him wow! ;)</item>
        <item>Looks like you want to kiss him!! :D</item>
        <item>You have gone insane! You want to hug him?</item>
        <item>Alright you should stop at this moment! Things might go wild :P</item>
    </string-array>

    <string-array name="think">
        <item>Vijay 😍</item>
        <item>Kiss 😘</item>
        <item>LipLock 💏</item>
        <item>Movie 🙊</item>
        <item>Long Drive 🚘</item>
        <item>To go out of Bangalore 🛩</item>
    </string-array>

    <string name="settings">Settings</string>
    <string name="nick_name">Nick name</string>
    <string name="phone">Phone</string>

    <string name="choose_nick_name">Choose your nick name</string>
    <string name="enter_nick_name">Enter your Nick Name</string>

    <string name="image_transition">Image Transition</string>
    <string name="name_transition">Name Transition</string>
    <string name="thinking_transition">Thinking Transition</string>
</resources>
