<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    tools:context=".ButterflyActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_expanded_dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#E6FFFFFF"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <library.CircleImageView
                    android:id="@+id/civ_profile_preview"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:transitionName="@string/image_transition"
                    android:src="@drawable/vj" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:src="@drawable/nick_name_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".7"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nick_name"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <TextView
                        android:id="@+id/tv_nick_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:transitionName="@string/name_transition"
                        android:text="@string/nick_name"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_think"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:src="@drawable/think" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".7"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/im_thinking_about"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <TextView
                        android:id="@+id/tv_thinking_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:transitionName="@string/thinking_transition"
                        android:text="@string/nick_name"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:src="@drawable/nick_name_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".7"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <TextView
                        android:id="@+id/tv_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_tap_to_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:text="Tap to close image"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/colorHint"
        android:visibility="gone" />

</FrameLayout>