<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_app_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:drawablePadding="10dp"
        android:textSize="40sp"
        android:drawableEnd="@drawable/butterfly_logo"
        android:textColor="@color/colorNextToWhite"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_put_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put_your_number"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorNextToWhite" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone_number"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="Your number"
                android:imeOptions="actionNext"
                android:inputType="number|phone"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_view"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="heart.json"
            app:lottie_loop="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_with_love"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>
</FrameLayout>